@@ -1,6 +1,6 @@
 #KeeFox_Menu-Button
 {
-    list-style-image: url("chrome://keefox/skin/main.png");  
+    list-style-image: url("chrome://keefox/skin/KeeFox16.png");  
 }
 
 #KeeFox_Menu-Button .toolbarbutton-menu-dropmarker,
