@@ -2,6 +2,8 @@ This information will often be disseminated onto the official KeeFox website in 
 
 0.7
 ---
+- New icon
+- Refinements to multi-page login tracking and filling
 - Form submissions now simulate a "click" on the form's submit button (if one can be found)
 - Username now displayed on tooltip of entries listed in the full list of Log-ins
 - KeeICE now uses the .plgx plugin format, permitting simpler upgrade procedures
